--- a/public/stylesheets/header.less
+++ b/public/stylesheets/header.less
@@ -10,12 +10,12 @@
 
 .navbar {
   background-color : @bg-color;
-  border-radius    : 0;
   border           : none;
   min-height       : 90px;
   text-shadow      : none;
   margin-bottom    : 0;
   z-index          : 1000;
+  .border-radius(0);
   .transition(all 0.3s);
 
   &.navbar-scrolled {
