--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,5 +1,5 @@
 @import "colors";
-@import "crossBrowser";
+@import "cross-browser";
 
 @white : #f2f2f2;
 @off-white : #e2e2e6;
@@ -11,11 +11,12 @@
 @import "home";
 @import "features";
 @import "pricing";
-@import "pricingTable";
-@import "termsAndConditions";
+@import "pricing-table";
+@import "terms-and-conditions";
 @import "blog";
-@import "blogPost";
+@import "blog-post";
 @import "security";
-@import "privacyPolicy";
+@import "privacy-policy";
 @import "company";
+@import "reset";
 
