--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,7 +8,7 @@
 				<img src="/images/404.png">
 			</div>
 			<p>The page you requested could not be found</p>
-			<div class="col-lg-12 med-margin-bottom med-margin-top">
+			<div class="col-lg-12 medium-margin-bottom medium-margin-top">
 				<a href="/" class="btn btn-primary btn-lg btn-icon-left" title="Home Page">
 					Home Page
 					<div class="hex-alt hex-alt-big">
