--- a/views/blog/blogLayout.ejs
+++ b/views/blog/blogLayout.ejs
@@ -113,7 +113,7 @@
 				</section>
 			</article>
 		</div>
-		<% include ../gotop %> <!-- includes the content variable layout -->
+		<% include ../go-top %> <!-- includes the content variable layout -->
 
 		<% include ../footer %> <!-- The footer for the site -->
 	</body>
