--- a/views/global-header.ejs
+++ b/views/global-header.ejs
@@ -2,16 +2,16 @@
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
-		<header class="small-header global-header-text">
-			<h1 class="headline text-small hairline underline underline-left">See Roadmunk In Action</h1>
-		</header>
 		<div class="row">
-			<div class="col-md-12 global-header-subheader">
-				<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
+			<div class="col-md-6">
+				<header class="small-header global-header-text">
+					<h1 class="headline text-small hairline underline underline-left">See Roadmunk In Action</h1>
+				</header>
+				<div class="global-header-subheader">
+					<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-6 small-margin-top">
 				<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
 					<div class="cta global-header-cta"></div>
 				</a>
