--- a/views/home.ejs
+++ b/views/home.ejs
@@ -121,7 +121,7 @@
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container-fluid">
-			<header class="section-header text-center underline med-margin-bottom">
+			<header class="section-header text-center underline medium-margin-bottom">
 				<h1 class="headline text-medium hairline xsmall-margin-bottom">Roadmaps Of All Types</h1>
 			</header>
 			<div class="row">
@@ -194,7 +194,7 @@
 			<header class="section-header text-center underline">
 				<h1 class="headline text-large xsmall-margin-bottom hairline">Our Clients</h1>
 			</header>
-			<div class="row med-margin-bottom">
+			<div class="row medium-margin-bottom">
 				<div class="col-md-12">
 					<ul class="list-unstyled row image-list">
 						<li class="col-md-3">
