--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
 		<% include content %> <!-- includes the content variable layout -->
 
 		<% if (content != "style-guide") { %>
-			<% include gotop %> <!-- includes the content variable layout -->
+			<% include go-top %> <!-- includes the content variable layout -->
 
 			<% include footer %> <!-- The footer for the site -->
 		<% } %>
