--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -7,7 +7,7 @@
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<% include pricingtable %>
+			<% include pricing-table %>
 		</div>
 	</section>
 </article>
