--- a/views/security.ejs
+++ b/views/security.ejs
@@ -32,7 +32,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<p>For more information, please refer to our <a href="http://roadmunk.com/privacypolicy">Privacy Policy</a> &#38; <a href="http://roadmunk.com/termsandconditions">Terms and Conditions</a>, or contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
+								<p>For more information, please refer to our <a href="http://roadmunk.com/privacy-policy">Privacy Policy</a> &#38; <a href="http://roadmunk.com/terms-and-conditions">Terms and Conditions</a>, or contact us at <a href="mailto:support@roadmunk.com?Subject=Support%20Case">support@roadmunk.com.</a></p>
 							</div>
 						</div>
 					</div>
