--- a/views/stylesheets.ejs
+++ b/views/stylesheets.ejs
@@ -12,6 +12,6 @@
 
 <% } else  { %>
 
-	<link rel='stylesheet' href='/stylesheets/styleGuide.css' />
+	<link rel='stylesheet' href='/stylesheets/style-guide.css' />
 
 <% } %> 
