--- a/public/stylesheets/features.less
+++ b/public/stylesheets/features.less
@@ -1,6 +1,6 @@
 .features-page .container {
 	img {
-		border-radius: 6px;
+		.border-radius(6px);
 		border: 1px solid @steel-lightest;
 		opacity: 0.95;
 	}
