--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -16,7 +16,7 @@
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<div class="row med-margin-bottom">
+			<div class="row medium-margin-bottom">
 				<div class="col-md-12 text-default">
 					<div class="row">
 						<ul class="list-unstyled blog-list">
@@ -91,4 +91,4 @@
 	</section>
 </article>
 <!-- Putting here instead of in scripts due to collsion with the blog page otherwise -->
-<% include commentcount %>
+<% include comment-count %>
