--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -34,7 +34,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/termsandconditions" title="Terms And Conditions">
+					<a href="/terms-and-conditions" title="Terms And Conditions">
 						Terms and Conditions
 					</a>
 				</li>
@@ -54,7 +54,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/privacypolicy" title="Privacy Policy">
+					<a href="/privacy-policy" title="Privacy Policy">
 						Privacy Policy
 					</a>
 				</li>
@@ -85,7 +85,7 @@
 		<div class="info-left">
 			&#169;2012&#45;2014 Roadmunk
 			&nbsp;&#183;&nbsp;
-			<a href="/termsandconditions" title="Terms And Conditions">
+			<a href="/terms-and-conditions" title="Terms And Conditions">
 				Terms And Conditions
 			</a>
 			&nbsp;&#183;&nbsp;
