Added functionality to the toggle

--- a/public/stylesheets/blog-post.less
+++ b/public/stylesheets/blog-post.less
@@ -8,39 +8,39 @@
 					font-size: 18px;
 				}
 				&.date {
-					font-size: 12px;
-					margin: 2px 0 0 0;
+					font-size : 12px;
+					margin    : 2px 0 0 0;
 				}
 			}
 		}
 	}
 	.blog-title {
 		text-align    : left;
-		font-size: 56px;
+		font-size     : 56px;
 		display       : inline-block;
 		border-bottom : 0;
 		position      : relative;
 		margin-bottom : 0;
-		line-height: 1em;
-		color: #fff;
+		line-height   : 1em;
+		color         : #fff;
 	}
 	.blog-content {
-		letter-spacing: 0.01rem;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 18px;
-		line-height: 1.5;
-		text-rendering: optimizeLegibility;
-		-webkit-font-smoothing: antialiased;
-		-moz-osx-font-smoothing: grayscale;
-		color : rgba(0,0,0,0.8);
-		margin-bottom: 60px;
+		letter-spacing          : 0.01rem;
+		font-weight             : 400;
+		font-style              : normal;
+		font-size               : 18px;
+		line-height             : 1.5;
+		text-rendering          : optimizeLegibility;
+		-webkit-font-smoothing  : antialiased;
+		-moz-osx-font-smoothing : grayscale;
+		color                   : rgba(0,0,0,0.8);
+		margin-bottom           : 60px;
 		img {
 			margin: 15px 0;
 			&.fill {
-			  padding: 25px 0;
-		      width: 100%;
-		      height: auto;
+				padding : 25px 0;
+				width   : 100%;
+				height  : auto;
 		    }
    		}
    		a {
@@ -55,17 +55,17 @@
 		font-size: 32px;
 	}
 	.footer {
-		border-top: 1px solid rgba(0,0,0,0.15);
-		background: @light-font;
-		color: @dark-font;
-		padding-top: 45px;
+		border-top  : 1px solid rgba(0,0,0,0.15);
+		background  : @light-font;
+		color       : @dark-font;
+		padding-top : 45px;
 		.author {
-			font-size: 18px;
-			font-weight:600;
+			font-size   : 18px;
+			font-weight : 600;
 		}
 		.bio {
-			font-size: 14px;
-			font-weight: 400;
+			font-size   : 14px;
+			font-weight : 400;
 		}
 	}
 	.disqus {
@@ -75,11 +75,11 @@
 	}
 }
 
-@media screen and (max-width: 1024px) { /* Specific to this particular image */
+@media (max-width: 1024px) { 
   .blog-post {
   	[class*="col-"] {
-		padding-left: 30px;
-		padding-right: 30px;
+		padding-left  : 30px;
+		padding-right : 30px;
 	}
   	.section {
 	  	&.section-xlarge {
