--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -463,6 +463,9 @@
     [class*="container"] {
       .section-header {
         margin-bottom: 40px;
+        &.large-margin-bottom {
+          margin-bottom: 90px;
+        }
       }
     }
     &.section-xs {
