--- a/public/stylesheets/reset.less
+++ b/public/stylesheets/reset.less
@@ -114,3 +114,25 @@
 .xsmall-margin-top {
     margin-top: 15px;
 }
+
+@media (max-width: 1000px) {
+    .text-xlarge {
+        font-size   : 56px;
+        line-height : 1;
+    }
+
+    .text-large {
+        font-size   : 42px;
+        line-height : 0.9;
+    }
+
+    .text-medium {
+        font-size   : 34px;
+        line-height : 0.9;
+    }
+
+    .text-small {
+        font-size   : 28px;
+        line-height : 0.8;
+    }
+}
