--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,11 +1,13 @@
+//Our color palette
 @import "colors";
+
+//Cross browser LESS mixins
 @import "cross-browser";
 
-@white : #f2f2f2;
-@off-white : #e2e2e6;
-@border-color: #777;
-
+//Global css assets used by all pages
 @import "global";
+
+//Specific Page CSS
 @import "header";
 @import "footer";
 @import "home";
@@ -18,5 +20,7 @@
 @import "security";
 @import "privacy-policy";
 @import "company";
+
+//Reset css styles used for margin, fonts etc.
 @import "reset";
 
