--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,10 +2,14 @@
 	<div class="background-media"></div>
 	<div class="background-overlay"></div>
 	<div class="container">
-		<header class="section-header text-center large-margin-bottom">
-			<h1 class="headline text-medium hairline">Roadmunk Blog</h1>
-			<p>All The Latest News and Updates</p>
-		</header>
+		<div class="row">
+			<div class="col-md-12">
+				<header class="section-header text-center large-margin-bottom">
+					<h1 class="headline text-medium hairline">Roadmunk Blog</h1>
+					<p>All The Latest News and Updates</p>
+				</header>
+			</div>
+		</div>
 	</div>
 </section>
 <article>
