--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				<header class="section-header home landing-text underline underline-left">
+				<header class="section-header home landing-text underline underline-left underline-landing">
 					<h1 class="headline text-large hairline landing-text">Create Beautiful Roadmaps Quickly</h1>
 					<p class="get-smaller">Start building insightful visualizations for your audience.</p>
 				</header>
