--- a/views/pricing-table.ejs
+++ b/views/pricing-table.ejs
@@ -9,10 +9,10 @@
 <div class="row">
 	<div class="col-md-4 center preview-switch">
 		<span id="monthly" class="write toggle-switch grey">Monthly</span>
-		<div class="switch-pill right">
+		<div id="toggle" class="switch-pill right">
 			<div class="switch"></div>
 		</div>
-		<span id="annually" class="toggle-switch right">Annually &#40;Save 20&#37;&#41;</span>
+		<span id="annually" class="toggle-switch right selected">Annually &#40;Save 20&#37;&#41;</span>
 	</div>
 </div>
 
