--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -5,152 +5,48 @@
 }
 
 .grid-post {
+
     &.white-black {
-        background: @steel-darkest;
-        font-weight: 300;
+        background  : @steel-darkest;
+        font-weight : 300;
     }
+
     .post-head,
     .post-body,
     .post-extras {
-        padding: 12px;
-        margin-left: 0;
+        padding     : 12px;
+        margin-left : 0;
     }
+
     img {
-        max-width: 100%;
-        height: auto;
+        max-width : 100%;
+        height    : auto;
     }
+
+
+    .post-author,
+    .post-date {
+        font-style : italic;
+        color      : @steel-icon;
+    }
+
     .post-head {
-        margin-bottom: 0;
-        padding-top: 24px;
-        padding-bottom: 0;
-        position: relative;
-        text-align: center;
+        margin-bottom  : 0;
+        padding-top    : 24px;
+        padding-bottom : 0;
+        position       : relative;
+        text-align     : center;
     }
-    .post-title {
-        padding-top: 0;
-        font-size: 24px;
-    }
-    .post-showinfo {
-        margin-left: 0;
-        .post-head {
-            padding-top: 12px;
-            z-index: 2;
-            position: relative;
-            margin-left: 8px;
-        }
-        .post-icon {
-            top: -24px;
-            left: 50%;
-            margin-left: -30px;
-            margin-right: 0;
-            z-index: 100;
 
-            display: block;
-            position: absolute;
-            font-size: 14px;
-            text-transform: uppercase;
-        }
-        .post-extras {
-            position: relative;
-            margin-left: 8px;
-            .post-comments {
-                font-size: 14px;
-            }
-        }
-        .post-body {
-            position: relative;
-            margin-left: 8px;
-        }
-    }
-    .post-media {
-        padding-top: 48px;
-        background: @steel-darker;
-        margin-bottom: 0px;
-        max-height: 200px;
-        overflow-y: hidden;
-        cursor: pointer;
-        &.overlay:hover {
-            background: @steel-dark;
-            .transition(all 0.2s);
-            img {
-                -webkit-filter: grayscale(1);
-                filter : grayscale(1);
-                .transition(all 0.2s);
-            }
-        }
-        //Figure out how to get overlay working
-        /*.overlay {
-            z-index: 5;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            .transition(background 0.2s);
-            &:hover {
-                .transition(background 0.2s);
-                background: rgba(0,0,0,0.07);
-            }
-        }*/
-        .feature-image {
-            display: block;
-            margin-top: -48px;
-        }
-    }
-    .post-body {
-        margin-bottom: 0;
-        color: @steel-icon;
-    }
-    .post-extras {
-        margin-top: 12px;
-        margin-left: 0;
-        margin-bottom: 24px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        height: 50px;
-        text-align: center;
-        color: @dialog-bg;
-
-        font-size: 18px;
-        position: relative;
-        //margin-bottom: 96px;
-        a {
-            color: @light-font;
-            &:hover {
-                color: darken(@light-font, 10%);
-            }
-        }
-
-        &:before {
-            position: absolute;
-            content: "";
-            height: 1px;
-            width: 45%;
-            left: 45%;
-            margin-left: -18%;
-            top: 0;
-            background: @dialog-bg;
-        }
-        &:after {
-            display: none;
-        }
-        a {
-            display: inline-block;
-            padding-right: 5px;
-            &:last-child {
-                padding-right: 0;
-            }
-        }
-    }
     .post {
-        margin-bottom: 24px;
-        position: relative;
+        margin-bottom : 24px;
+        position      : relative;
         //display: inline-block; // will make bottom fixed
     }
-    .post-head {
-        .no-title {
-            margin-bottom: 0;
-        }
-    }
+
     .post-title {
+        padding-top : 0;
+        font-size   : 24px;
         margin-bottom: 0;
         a {
             color: @dialog-bg;
@@ -159,56 +55,162 @@
             }
         }
     }
-    .post-author,
-    .post-date {
-        font-style: italic;
-        color: @steel-icon;
-    }
-    .more-link {
-        display: block;
-        color: @dialog-bg;
-        &:hover {
-            color: darken(@dialog-bg, 10%);
+
+    .post-showinfo {
+        margin-left: 0;
+
+        .post-head {
+            padding-top : 12px;
+            z-index     : 2;
+            position    : relative;
+            margin-left : 8px;
+             .no-title {
+                margin-bottom: 0;
+            }
+        }
+
+        .post-icon {
+            top            : -24px;
+            left           : 50%;
+            margin-left    : -30px;
+            margin-right   : 0;
+            z-index        : 100;
+            
+            display        : block;
+            position       : absolute;
+            font-size      : 14px;
+            text-transform : uppercase;
+        }
+
+        .post-extras {
+            margin-top     : 12px;
+            margin-left    : 0;
+            margin-bottom  : 24px;
+            padding-top    : 12px;
+            padding-bottom : 12px;
+            height         : 50px;
+            text-align     : center;
+            color          : @dialog-bg;
+            
+            font-size      : 18px;
+            position       : relative;
+            a {
+                color: @light-font;
+                &:hover {
+                    color: darken(@light-font, 10%);
+                }
+            }
+
+            &:before {
+                position    : absolute;
+                content     : "";
+                height      : 1px;
+                width       : 45%;
+                left        : 45%;
+                margin-left : -18%;
+                top         : 0;
+                background  : @dialog-bg;
+            }
+            &:after {
+                display: none;
+            }
+            a {
+                display       : inline-block;
+                padding-right : 5px;
+                &:last-child {
+                    padding-right: 0;
+                }
+            }
+
+            &.bordered {
+                position: relative;
+                &:after {
+                    content     : "";
+                    position    : absolute;
+                    left        : 50%;
+                    bottom      : 0px;
+                    width       : 140px;
+                    height      : 2px;
+                    margin-left : -70px;
+                }
+            }
+
+            .post-comments {
+                font-size: 14px;
+            }
+        }
+
+        .post-body {
+            position: relative;
+            margin-left: 8px;
+            margin-bottom : 0;
+            color         : @steel-icon;
+            .more-link {
+                display: block;
+                color: @dialog-bg;
+                &:hover {
+                    color: darken(@dialog-bg, 10%);
+                }
+            }
+        }
+
+        .post-media {
+            padding-top   : 48px;
+            background    : @steel-darker;
+            margin-bottom : 0px;
+            max-height    : 200px;
+            overflow-y    : hidden;
+            cursor        : pointer;
+            &.overlay:hover {
+                background: @steel-dark;
+                .transition(all 0.2s);
+                img {
+                    -webkit-filter : grayscale(1);
+                    filter         : grayscale(1);
+                    .transition(all 0.2s);
+                }
+            }
+            //Figure out how to get overlay working
+            /*.overlay {
+                z-index: 5;
+                width: 100%;
+                height: 100%;
+                background: transparent;
+                .transition(background 0.2s);
+                &:hover {
+                    .transition(background 0.2s);
+                    background: rgba(0,0,0,0.07);
+                }
+            }*/
+            .feature-image {
+                display    : block;
+                margin-top : -48px;
+            }
         }
     }
 }
 
-.bordered {
-    position: relative;
-}
-.bordered:after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0px;
-    width: 140px;
-    height: 2px;
-    margin-left: -70px;
-}
-
 /* RWD for blog */
 @media (max-width: 1000px) {
-    .grid-post {
-        .post-showinfo {
-            .post-head,
-            .post-body,
-            .post-extras {
-                margin-left: 0;
-            }
-            .post-head {
-                padding-top: 30px;
-                z-index: 2;
-            }
-            .post-media {
-                margin-bottom: 0;
-            }
-            .post-icon {
-                top: -20px;
-                left: 50%;
-                margin-left: -20px;
-                margin-right: 0;
-                z-index: 100;
-            }
+    .grid-post .post-showinfo {
+        .post-head,
+        .post-body,
+        .post-extras {
+            margin-left: 0;
+        }
+        .post-head {
+            padding-top: 30px;
+            z-index: 2;
+        }
+        .post-media {
+            margin-bottom: 0;
+        }
+        .post-icon {
+            top          : -20px;
+            left         : 50%;
+            margin-left  : -20px;
+            margin-right : 0;
+            z-index      : 100;
         }
     }
 }
